nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: nodejs
spec:
  selector:
    app: nodejs
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: nodejs
    protocol: TCP
    port: 3000
    targetPort: 3000
